# OpenProcessor

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  ATTRIBUTION.md  BENCHMARK_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT_REPORT.md  COMPETITIVE_ANALYSIS.md  Dockerfile  Dockerfile.triton  FINAL_AUDIT_SUMMARY.md  INSTALLATION.md  LICENSE  Makefile  PRECOMMIT_COMPARISON.md  PROJECT_STATUS.md  README.md  TODO_PERF_TESTING.md  docker-compose.override.yml  docker-compose.yml  env.template  pyproject.toml  requirements-dev.txt  requirements-export-y11.txt  requirements.txt
.github/workflows/: security-scan.yml
benchmarks/: .golangci.yml  README.md  go.mod  ingest_benchmark.go  ingest_benchmark_batch.go  triton_bench.go
benchmarks/scripts/: benchmark.py  detect.lua
config_templates/profiles/: full.json  minimal.json  standard.json
docker/hardened/: README.md
docker/hardened/deepstream/: Dockerfile  trivyignore.txt
docker/hardened/test/: .gitignore  build_scan.sh  infer_check.py  make_test_model.py  test_deepstream.sh  test_triton.sh
docker/hardened/triton/: Dockerfile
docs/: ARCHITECTURE.md  FACE_RECOGNITION_IMPLEMENTATION.md  FEATURE_ROADMAP.md  INGEST_BENCHMARK_METHODOLOGY.md  MIGRATION_TRITON_26.md  OCR.md  OCR_DEPLOYMENT_CHECKLIST.md  OCR_IMPLEMENTATION_PLAN.md  OCR_SETUP_GUIDE.md  PADDING_COMPARISON_GUIDE.md  PERFORMANCE.md  README.md  opensearch_schema_design.md
docs/Technical/: TRITON_BEST_PRACTICES.md
docs/security/: triton_deepstream_cve_remediation.md  triton_deepstream_hardening_plan.md
export/: README.md  download_face_models.py  download_paddleocr.py  export_face_recognition.py  export_mobileclip_image_encoder.py  export_mobileclip_text_encoder.py  export_models.py  export_paddleocr_det.py  export_paddleocr_rec.py  export_scrfd.py  export_yolo11_face.py  export_yolo26.py  trt_utils.py  utils.py
models/arcface_w600k_r50/: config.pbtxt
models/face_pipeline_cpp/: CMakeLists.txt  Dockerfile.build  README.md  build.sh  config.pbtxt
models/face_pipeline_cpp/1/src/: face_pipeline.cc
models/face_pipeline_cpp/src/: face_pipeline.cc  gpu_crop.cu
models/mobileclip2_s2_image_encoder/: config.pbtxt
models/mobileclip2_s2_text_encoder/: config.pbtxt
models/ocr_pipeline/: config.pbtxt
models/ocr_pipeline/1/: model.py
models/paddleocr_det_trt/: config.pbtxt
models/paddleocr_rec_trt/: config.pbtxt
models/scrfd_10g_bnkps/: config.pbtxt
models/unified_complete_pipeline/: config.pbtxt
models/unified_complete_pipeline/1/: model.py
models/unified_complete_pipeline_direct/: config.pbtxt
models/unified_complete_pipeline_direct/1/: model.py
models/unified_direct_ensemble/: config.pbtxt
models/unified_embedding_extractor/: config.pbtxt
models/yolo11_face_pipeline/: config.pbtxt
models/yolo11_face_pipeline/1/: model.py
models/yolo11_face_pipeline_cpp/1/: model.cc
models/yolo11_face_small_trt_end2end/: config.pbtxt
models/yolo11s_test_upload_trt_end2end/: config.pbtxt
models/yolo26_small_trt/: config.pbtxt
models/yolov11_nano/: config.pbtxt
models/yolov11_nano_trt/: config.pbtxt
models/yolov11_small_trt_end2end/: config.pbtxt
monitoring/: README.md  alloy-config.alloy  grafana-alerting.yml  prometheus.yml  promtail-config.yml
monitoring/dashboards/: gpu-metrics-dashboard.json  triton-unified-dashboard.json
rust-preprocess/: .gitignore  Cargo.toml  Dockerfile  README.md  STATUS.md  build.rs
rust-preprocess/src/: config.rs  error.rs  hash.rs  main.rs
rust-preprocess/src/handlers/: detect.rs  embed.rs  health.rs  ingest.rs  mod.rs
rust-preprocess/src/opensearch/: bulk.rs  client.rs  duplicate.rs  mod.rs
rust-preprocess/src/postprocess/: coco_classes.rs  detection.rs  mod.rs
rust-preprocess/src/preprocess/: clip.rs  crop.rs  decode.rs  mod.rs  yolo.rs
rust-preprocess/src/triton/: client.rs  mod.rs  proto.rs
scripts/: README.md  bench_cpp_backend.py  bench_face_endpoints.py  benchmark_preprocessing.py  clone_reference_repos.sh  create_ocr_test_images.py  docker-build-push.sh  download_ocr_test_images.py  download_yolo11_face.py  export_paddleocr.sh  export_results.json  ingest_all_indexes.py  openprocessor.sh  profile_pipeline.py  resize_images.py  security-scan.sh  setup.sh  setup_face_test_data.sh  test_cpp_backend.py  triton-api.sh
scripts/codegen/: check_file_size.py
scripts/lib/: colors.sh  config.sh  download.sh  export.sh  gpu.sh
src/: README.md  main.py
src/clients/: __init__.py  fast_face_client.py  model_adapters.py  opensearch.py  triton_client.py  triton_pool.py
src/config/: settings.py
src/core/: __init__.py  logging.py  metrics.py
src/routers/: __init__.py  analyze.py  clusters.py  detect.py  embed.py  faces.py  health.py  ingest.py  models.py  ocr.py  persons.py  query.py  search.py  track_e.py  v1.py
src/schemas/: __init__.py  detection.py  models.py  visual_search.py
src/services/: buffer_pool.py  cluster_maintenance.py  cpu_preprocess.py  duplicate_detection.py  embedding.py  face_identity.py  inference.py  model_export.py  ocr_service.py  optimized_ingest.py  parallel_ingest.py  triton_control.py  visual_search.py
src/ultralytics_patches/: end2end_export.py
src/utils/: README.md  __init__.py  affine.py  cache.py  face_align.py  retry.py  scrfd_decode.py
tests/: bench_scrfd_pipeline.py  conftest.py  create_test_images.py  expected_results.json  test_api_model_upload.py  test_endpoints.sh  test_full_system.py  test_nano_model.py  test_scrfd_pipeline.py  test_validate_models.py  validate_visual_results.py
tests/integration/: test_health_endpoints.py  test_metrics_exposure.py  test_model_adapters.py  test_prometheus_scrape_config.py  test_request_id_propagation.py
