[package]
name = "rust-preprocess"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# gRPC (Triton)
tonic = "0.12"
prost = "0.13"

# Image processing
turbojpeg = "1"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "bmp"] }
fast_image_resize = "4"

# OpenSearch / HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
murmur3 = "0.5"
bytemuck = "1"
num_cpus = "1"

# Async
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"
